add timer, check code
